--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "eject": "expo eject",
-    "postinstall": "remotedev-debugger [options]"
+    "eject": "expo eject"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -23,8 +22,7 @@
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
     "redux-devtools-cli": "0.0.1-1",
-    "remote-redux-devtools": "^0.5.16",
-    "remotedev-rn-debugger": "^0.8.3"
+    "remote-redux-devtools": "^0.5.16"
   },
   "private": true
 }
