--- a/package.json
+++ b/package.json
@@ -4,26 +4,43 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test:e2e": "detox test -c ios.sim.debug",
+    "test:e2e:build": "detox build"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "expo": "^31.0.6",
+    "expo": "^32.0.0",
     "js-cookie": "^2.2.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-looped-carousel": "^0.1.13",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.1.0",
-    "react-navigation": "^3.0.7",
+    "react-navigation": "^3.0.9",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
+    "detox": "^10.0.10",
+    "detox-expo-helpers": "^0.6.0",
+    "expo-detox-hook": "^1.0.10",
+    "jest": "^24.1.0",
     "redux-devtools-cli": "0.0.1-1",
     "remote-redux-devtools": "^0.5.16"
   },
-  "private": true
+  "private": true,
+  "detox": {
+    "test-runner": "jest",
+    "runner-config": "e2e/config.json",
+    "configurations": {
+      "ios.sim": {
+        "binaryPath": "bin/gogonow.app",
+        "type": "ios.simulator",
+        "name": "iPhone 7"
+      }
+    }
+  }
 }
