--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "test:e2e": "detox test -c ios.sim.debug",
-    "test:e2e:build": "detox build"
+    "e2e": "detox test"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -37,7 +36,7 @@
     "runner-config": "e2e/config.json",
     "configurations": {
       "ios.sim": {
-        "binaryPath": "bin/gogonow.app",
+        "binaryPath": "bin/Exponent.app",
         "type": "ios.simulator",
         "name": "iPhone 7"
       }
